[package]
name = "fastly-dynamic-watermarking"
version = "0.1.0"
authors = ["<you@example.com>"]
edition = "2021"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[profile.release]
# Optimize for size and performance.
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
fastly = "0.11.5"
rand = "0.9.1"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.13.0"
serde_json = "1.0"
base64 = "0.22"
urlencoding = "2.1.3"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
console = "0.15.8"

[workspace]

