[package]
name = "{NAME}"
version = "0.1.0"
edition = "2021"

[dependencies]
fastly = "0.10"
jsonwebtoken = "9.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"