[package]
name = "setup-tool"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.12"
console = "0.15.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[features]
setup_cli = []
